更新：基本数据结构：进阶

--- a/book_parts/python_basics/06.5-data-structure-2.ipynb
+++ b/book_parts/python_basics/06.5-data-structure-2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List嵌套Tuple："
+    "列表嵌套元组："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "('C', 1)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,12 +78,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "字典嵌套 List和Tuple："
+    "字典的值为列表或元组："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "(3, 4, 5)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "'B'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
    "source": [
     "a = [2,5,1,3]\n",
     "\n",
-    "print(sorted(a,reverse=True)) # 逆序，sorted返回一个排序好的新列表，不改变原值\n",
+    "print(sorted(a, reverse=True)) # 逆序，sorted返回一个排序好的新列表，不改变原值\n",
     "print(a) # a保持不变\n",
     "a.sort(reverse=True) # 逆序，原地排序，这个方法不返回值。\n",
     "print(a) # a已经被改变"
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "[['C', 1, 2], ['B', 2, 6], ['A', 3, 1]]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
     "def get_2nd_item(x):\n",
     "    return x[1]\n",
     "\n",
-    "sorted(a, key = get_2nd_item)"
+    "sorted(a, key=get_2nd_item)"
    ]
   },
   {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -357,14 +357,14 @@
        "[['C', 1, 2], ['B', 2, 6], ['A', 3, 1]]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 写成匿名函数的版本\n",
-    "sorted(a, key = lambda x:x[1]) "
+    "sorted(a, key=lambda x: x[1]) "
    ]
   },
   {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -393,23 +393,23 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def sum_2_3(x):\n",
-    "    return x[1]+x[2]\n",
+    "    return x[1] + x[2]\n",
     "\n",
     "print(a[0]) # 测试一下是否正常\n",
     "\n",
-    "sorted(a, key = sum_2_3)"
+    "sorted(a, key=sum_2_3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -418,14 +418,14 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 写成匿名函数的版本\n",
-    "sorted(a, key = lambda x:x[1]+x[2])"
+    "sorted(a, key=lambda x: x[1] + x[2])"
    ]
   },
   {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "dict_items([('A', [1, 2, 3]), ('B', (3, 4, 5)), ('C', [2, 3, 4])])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -477,13 +477,13 @@
        "[('A', [1, 2, 3]), ('C', [2, 3, 4]), ('B', (3, 4, 5))]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted_items = sorted(c.items(), key= lambda x:x[1][0])\n",
+    "sorted_items = sorted(c.items(), key=lambda x: x[1][0])\n",
     "sorted_items"
    ]
   },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -514,13 +514,13 @@
        "{'A': [1, 2, 3], 'C': [2, 3, 4], 'B': (3, 4, 5)}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(sorted(c.items(), key= lambda x:x[1][0]))"
+    "dict(sorted(c.items(), key=lambda x: x[1][0]))"
    ]
   },
   {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -617,12 +617,12 @@
    "source": [
     "显然，和字典`.items()`类似，`enumerate(a_list)`也是获得可以 `[(index, value), (index, value), ...]`的序列。\n",
     "\n",
-    "注：`enumerate(a_list)`返回一个生成器，当你要具体访问里面的值的时候，才会临时生成某个`(index,value)`，如果要打印出来看，需要转为List。（当然也可以转为字典）"
+    "注：`enumerate(a_list)`返回一个 enumerate 对象（迭代器），当你要具体访问其中的值时才会逐个产生；如果要打印出来看，需要转为 list（当然也可以转为字典）。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -699,8 +699,8 @@
     "list1= ('a', 'b', 'c')\n",
     "list2 = [1, 2, 3, 4]\n",
     "\n",
-    "print(list(zip(list1,list2)))\n",
-    "print(list(zip(list1,list2,list1))) # 可以组合不止2个序列"
+    "print(list(zip(list1, list2)))\n",
+    "print(list(zip(list1, list2, list1))) # 可以组合不止2个序列"
    ]
   },
   {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -721,13 +721,13 @@
        "{'a': 1, 'b': 2, 'c': 3}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(zip(list1,list2))"
+    "dict(zip(list1, list2))"
    ]
   },
   {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
     }
    ],
    "source": [
-    "for i,j in zip(list1,list2):\n",
+    "for i, j in zip(list1, list2):\n",
     "    print(i,j)"
    ]
   },
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "3"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "[(1, 2, 3), ('one', 'two', 'three')]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,11 +821,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x,y = list(zip(*a_list)) # 如果要赋值的话，可以这么写"
+    "x, y = list(zip(*a_list)) # 如果要赋值的话，可以这么写"
    ]
   },
   {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
    "source": [
     "a = list('apple')\n",
     "\n",
-    "print(a.pop()) # 获取最后个元素，并删除。\n",
+    "print(a.pop()) # 获取最后一个元素，并删除。\n",
     "print(a) # 最后一个元素已经删除"
    ]
   },
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -890,12 +890,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "对于Dic，需要指定key，pop()会返回value，并移除这个key。"
+    "对于 Dict，需要指定 key；`pop(key[, default])` 会返回对应的 value，并移除该键；提供 `default` 可避免 `KeyError`。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -943,6 +943,158 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 进阶补充：\n",
+    "\n",
+    "### 更强的排序 key\n",
+    "\n",
+    "- 使用 `operator.itemgetter/attrgetter` 提升可读性。\n",
+    "- 多键排序时，`reverse=True` 作用于整体；若需混合方向，可用“带符号的元组 key”或利用稳定排序分两步。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['C', 1, 2], ['B', 2, 6], ['A', 3, 1]]\n",
+      "[{'name': 'Clare', 'score': 85, 'age': 19}, {'name': 'Alice', 'score': 85, 'age': 20}, {'name': 'Bob', 'score': 92, 'age': 21}]\n",
+      "[{'name': 'Bob', 'score': 92, 'age': 21}, {'name': 'Clare', 'score': 85, 'age': 19}, {'name': 'Alice', 'score': 85, 'age': 20}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from operator import itemgetter\n",
+    "\n",
+    "a = [['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]\n",
+    "print(sorted(a, key=itemgetter(1)))  # 等价于 key=lambda x: x[1]\n",
+    "\n",
+    "data = [\n",
+    "    {'name': 'Alice', 'score': 85, 'age': 20},\n",
+    "    {'name': 'Bob',   'score': 92, 'age': 21},\n",
+    "    {'name': 'Clare', 'score': 85, 'age': 19},\n",
+    "]\n",
+    "# 多键（均升序）\n",
+    "print(sorted(data, key=itemgetter('score', 'age')))\n",
+    "\n",
+    "# 混合方向：先按 age 升序稳定排序，再按 score 降序\n",
+    "tmp = sorted(data, key=itemgetter('age'))\n",
+    "print(sorted(tmp, key=itemgetter('score'), reverse=True))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### enumerate 从 1 开始\n",
+    "\n",
+    "通过 `start=` 参数让索引从 1 开始计数，更贴近人类习惯。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 a\n",
+      "2 b\n",
+      "3 c\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_list = ['a', 'b', 'c']\n",
+    "for idx, val in enumerate(a_list, start=1):\n",
+    "    print(idx, val)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### zip_longest（保留最长序列）\n",
+    "\n",
+    "当序列长度不一时，`zip` 按最短截断；如需保留最长，可用 `itertools.zip_longest`。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 1), ('b', 2), ('c', 3), (None, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import zip_longest\n",
+    "\n",
+    "list1 = ('a', 'b', 'c')\n",
+    "list2 = [1, 2, 3, 4]\n",
+    "print(list(zip_longest(list1, list2, fillvalue=None)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 队列操作与性能\n",
+    "\n",
+    "`list.pop(0)` 为 O(n)；频繁从头部出队建议用 `collections.deque`（`popleft()` 为 O(1)）。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "dq = deque([1, 2, 3])\n",
+    "dq.popleft()\n",
+    "print(dq)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 常见错误速查\n",
+    "\n",
+    "- `enumerate` 是迭代器：被消费后需重新构造；打印需 `list(...)`。\n",
+    "- `zip` 截断：长度不齐会丢后续元素；需要保留用 `itertools.zip_longest`。\n",
+    "- `sorted` vs `.sort()`：`sorted()` 返回新列表；`.sort()` 原地修改并返回 `None`。\n",
+    "- `dict.pop(key)`：key 不存在会抛 `KeyError`，可用 `pop(key, default)`。\n",
+    "- `list.pop(i)`：索引越界抛 `IndexError`；`pop(0)` 性能差，队列用 `deque.popleft()`。\n",
+    "- 混合排序方向：`reverse=True` 作用于整体；需“分字段正/逆序”时，用带符号的元组 key 或稳定排序两步法。\n",
+    "- key 函数下标错误：确认嵌套结构索引，如 `x[1][0]` 是否匹配实际结构。\n",
+    "- 负号降序仅适用于数值；字符串等不可取负时用 `reverse=True` 或映射策略。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## 小结\n",
     "\n",
@@ -961,7 +1113,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "econ",
    "language": "python",
    "name": "python3"
   },
@@ -975,14 +1127,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "6a59ff3677af3ee54f2b842bd13e0af80e5d1ab3f1f22239d3105698bf62dfb2"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
