--- a/book_parts/python_basics/05-control-and-loops.qmd
+++ b/book_parts/python_basics/05-control-and-loops.qmd
@@ -378,9 +378,9 @@ print("循环结束")
 ```
 
 
-2. 利用循环，求1到100的累加，计算完成最后打印出来
+2. 利用循环，求1到100的累加，计算完成最后打印出来。
 
-小提示：你可以建立一个新的变量，用来存放累加的结果；或直接使用内置函数 `sum(range(1, 101))`。
+小提示：你可以建立一个新的变量，用来存放累加的结果。
 
 ```{python}
 
