背单词程序最终版

--- a/example_words_app/data_generation.ipynb
+++ b/example_words_app/data_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e2603006",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "[4505 rows x 5 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8a71e3fc",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ee951a9c",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dc8d37ab",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5112c5a0",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "[4473 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0b0b3623",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "633ea657",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d6caab00",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "3de7d100",
    "metadata": {},
    "outputs": [
@@ -406,167 +406,110 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>word</th>\n",
-       "      <th>translate</th>\n",
-       "      <th>createdTime</th>\n",
-       "      <th>modifyTime</th>\n",
+       "      <th>definition</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>3061</th>\n",
-       "      <td>3062</td>\n",
        "      <td>agree</td>\n",
        "      <td>vi.同意；持相同意见</td>\n",
-       "      <td>2020-05-13T23:05:04.733</td>\n",
-       "      <td>2020-05-13T23:05:04.733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3039</th>\n",
-       "      <td>3040</td>\n",
        "      <td>allow</td>\n",
        "      <td>vt.允许，准许；任</td>\n",
-       "      <td>2020-05-13T23:05:04.733</td>\n",
-       "      <td>2020-05-13T23:05:04.733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2823</th>\n",
-       "      <td>2824</td>\n",
        "      <td>appear</td>\n",
        "      <td>vi.出现；来到；似乎</td>\n",
-       "      <td>2020-05-13T23:05:04.733</td>\n",
-       "      <td>2020-05-13T23:05:04.733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3344</th>\n",
-       "      <td>3345</td>\n",
        "      <td>believe</td>\n",
        "      <td>vt.相信；认为</td>\n",
-       "      <td>2020-05-13T23:05:04.737</td>\n",
-       "      <td>2020-05-13T23:05:04.737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3145</th>\n",
-       "      <td>3146</td>\n",
        "      <td>borrow</td>\n",
        "      <td>vt.借，借用，借人</td>\n",
-       "      <td>2020-05-13T23:05:04.737</td>\n",
-       "      <td>2020-05-13T23:05:04.737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2528</th>\n",
-       "      <td>2529</td>\n",
        "      <td>choose</td>\n",
        "      <td>vt.选择，挑选；情愿</td>\n",
-       "      <td>2020-05-13T23:05:04.74</td>\n",
-       "      <td>2020-05-13T23:05:04.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2266</th>\n",
-       "      <td>2267</td>\n",
        "      <td>compare</td>\n",
        "      <td>vt.比较，对照；比作</td>\n",
-       "      <td>2020-05-13T23:05:04.74</td>\n",
-       "      <td>2020-05-13T23:05:04.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2532</th>\n",
-       "      <td>2533</td>\n",
        "      <td>continue</td>\n",
        "      <td>vt.继续，连续；延伸</td>\n",
-       "      <td>2020-05-13T23:05:04.74</td>\n",
-       "      <td>2020-05-13T23:05:04.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2570</th>\n",
-       "      <td>2571</td>\n",
        "      <td>decide</td>\n",
        "      <td>vt.决定，决心；解决</td>\n",
-       "      <td>2020-05-13T23:05:04.743</td>\n",
-       "      <td>2020-05-13T23:05:04.743</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253</th>\n",
-       "      <td>254</td>\n",
        "      <td>prefer</td>\n",
        "      <td>vt.宁可，宁愿</td>\n",
-       "      <td>2020-05-13T23:05:04.767</td>\n",
-       "      <td>2020-05-13T23:05:04.767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>227</th>\n",
-       "      <td>228</td>\n",
        "      <td>probably</td>\n",
        "      <td>ad.或许，大概</td>\n",
-       "      <td>2020-05-13T23:05:04.767</td>\n",
-       "      <td>2020-05-13T23:05:04.767</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>533</th>\n",
-       "      <td>534</td>\n",
        "      <td>remember</td>\n",
        "      <td>vt.记得，想起；记住</td>\n",
-       "      <td>2020-05-13T23:05:04.77</td>\n",
-       "      <td>2020-05-13T23:05:04.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1380</th>\n",
-       "      <td>1381</td>\n",
        "      <td>through</td>\n",
        "      <td>prep.穿过ad.从头到尾</td>\n",
-       "      <td>2020-05-13T23:05:04.783</td>\n",
-       "      <td>2020-05-13T23:05:04.783</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id      word       translate              createdTime  \\\n",
-       "3061  3062     agree     vi.同意；持相同意见  2020-05-13T23:05:04.733   \n",
-       "3039  3040     allow      vt.允许，准许；任  2020-05-13T23:05:04.733   \n",
-       "2823  2824    appear     vi.出现；来到；似乎  2020-05-13T23:05:04.733   \n",
-       "3344  3345   believe        vt.相信；认为  2020-05-13T23:05:04.737   \n",
-       "3145  3146    borrow      vt.借，借用，借人  2020-05-13T23:05:04.737   \n",
-       "2528  2529    choose     vt.选择，挑选；情愿   2020-05-13T23:05:04.74   \n",
-       "2266  2267   compare     vt.比较，对照；比作   2020-05-13T23:05:04.74   \n",
-       "2532  2533  continue     vt.继续，连续；延伸   2020-05-13T23:05:04.74   \n",
-       "2570  2571    decide     vt.决定，决心；解决  2020-05-13T23:05:04.743   \n",
-       "253    254    prefer        vt.宁可，宁愿  2020-05-13T23:05:04.767   \n",
-       "227    228  probably        ad.或许，大概  2020-05-13T23:05:04.767   \n",
-       "533    534  remember     vt.记得，想起；记住   2020-05-13T23:05:04.77   \n",
-       "1380  1381   through  prep.穿过ad.从头到尾  2020-05-13T23:05:04.783   \n",
-       "\n",
-       "                   modifyTime  \n",
-       "3061  2020-05-13T23:05:04.733  \n",
-       "3039  2020-05-13T23:05:04.733  \n",
-       "2823  2020-05-13T23:05:04.733  \n",
-       "3344  2020-05-13T23:05:04.737  \n",
-       "3145  2020-05-13T23:05:04.737  \n",
-       "2528   2020-05-13T23:05:04.74  \n",
-       "2266   2020-05-13T23:05:04.74  \n",
-       "2532   2020-05-13T23:05:04.74  \n",
-       "2570  2020-05-13T23:05:04.743  \n",
-       "253   2020-05-13T23:05:04.767  \n",
-       "227   2020-05-13T23:05:04.767  \n",
-       "533    2020-05-13T23:05:04.77  \n",
-       "1380  2020-05-13T23:05:04.783  "
+       "          word      definition\n",
+       "3061     agree     vi.同意；持相同意见\n",
+       "3039     allow      vt.允许，准许；任\n",
+       "2823    appear     vi.出现；来到；似乎\n",
+       "3344   believe        vt.相信；认为\n",
+       "3145    borrow      vt.借，借用，借人\n",
+       "2528    choose     vt.选择，挑选；情愿\n",
+       "2266   compare     vt.比较，对照；比作\n",
+       "2532  continue     vt.继续，连续；延伸\n",
+       "2570    decide     vt.决定，决心；解决\n",
+       "253     prefer        vt.宁可，宁愿\n",
+       "227   probably        ad.或许，大概\n",
+       "533   remember     vt.记得，想起；记住\n",
+       "1380   through  prep.穿过ad.从头到尾"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cet4_sample_df = df[df['word'].isin(cet4_basic_words)]\n",
+    "cet4_sample_df = cet4_df[cet4_df['word'].isin(cet4_basic_words)]\n",
     "cet4_sample_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "eab290db",
    "metadata": {},
    "outputs": [],
