--- a/book_parts/python_basics/06.5-data-structure-2.ipynb
+++ b/book_parts/python_basics/06.5-data-structure-2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "('C', 1)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "(3, 4, 5)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "'B'"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,12 +313,14 @@
     "\n",
     "换句话说，你给出一个排序的凭据，要构造一个比较不同子List大小办法，这个办法的结果，体现在你要算出一个可比较的值，如一个数字。\n",
     "\n",
-    "落实到本例，如果只是比较第二个元素的大小，则直接返回第二个元素即可。"
+    "落实到本例，如果只是比较第二个元素的大小，则直接返回第二个元素即可。\n",
+    "\n",
+    "**注意**：是的，函数也是可以作为参数传递给另一个函数！你可以想象，sorted函数（将会在其内部）对列表a的每个元素，都调用一次get_2nd_item()，等于把a中的每个元素内部第二个子元素提取出来，然后按这个值来排序！\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +329,7 @@
        "[['C', 1, 2], ['B', 2, 6], ['A', 3, 1]]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +338,8 @@
     "def get_2nd_item(x):\n",
     "    return x[1]\n",
     "\n",
+    "# 你看到的没错！get_2nd_item是一个函数，我们把get_2nd_item传递给sorted，提供给后者使用！\n",
+    "# 等于说：hey，sorted函数！你就用get_2nd_item这个函数算出来的值来排序吧！\n",
     "sorted(a, key=get_2nd_item)"
    ]
   },
@@ -348,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +361,7 @@
        "[['C', 1, 2], ['B', 2, 6], ['A', 3, 1]]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +397,7 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +422,7 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +453,7 @@
        "dict_items([('A', [1, 2, 3]), ('B', (3, 4, 5)), ('C', [2, 3, 4])])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +481,7 @@
        "[('A', [1, 2, 3]), ('C', [2, 3, 4]), ('B', (3, 4, 5))]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +518,7 @@
        "{'A': [1, 2, 3], 'C': [2, 3, 4], 'B': (3, 4, 5)}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +664,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +725,7 @@
        "{'a': 1, 'b': 2, 'c': 3}"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +779,7 @@
        "3"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +813,7 @@
        "[(1, 2, 3), ('one', 'two', 'three')]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "econ",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1127,7 +1131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
